# vkbottle-bot-template

./: LICENSE  pyproject.toml
src/: __init__.py  __main__.py  app.py  config.py  initialize.py
src/blueprints/: __init__.py
src/database/: __init__.py
src/middlewares/: __init__.py
